src/objects/cb5__CBOrgVariable__c.object
<CustomObject>
    <fields>
        <fullName>GMGrantGrouping__c</fullName>
        <label>GM Grant Grouping</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>cb5__CBSubAccountName__c</fullName>
                    <label>Sub Account</label>
                </value>
                <value>
                    <fullName>cb5__CBVariable1__r.Name</fullName>
                    <label>Var 1</label>
                </value>
                <value>
                    <fullName>cb5__CBVariable2__r.Name</fullName>
                    <label>Var 2</label>
                </value>
                <value>
                    <fullName>cb5__CBVariable3__r.Name</fullName>
                    <label>Var 3</label>
                </value>
                <value>
                    <fullName>cb5__CBVariable4__r.Name</fullName>
                    <label>Var 4</label>
                </value>
                <value>
                    <fullName>cb5__CBVariable5__r.Name</fullName>
                    <label>Var 5</label>
                </value>
                <value>
                    <fullName>cb5__CBDivision__r.Name</fullName>
                    <label>CBDivision</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cb5__AllocationIsUsing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True is budget lines can be allocated</description>
        <inlineHelpText>True is budget lines can be allocated</inlineHelpText>
        <label>Allocation Is Using</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cb5__ApprovalIsUsing__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Approval Is Using</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cb5__BottomUpMode__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if bottom up mode is needed</description>
        <label>Bottom Up Mode Is Using</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cb5__BudgetLineIsMultiYear__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true budget line allows populate amounts for several years</description>
        <label>Budget Line Is Multi Year</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cb5__BudgetLineLvl1Style__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budget Line Lvl1 Style</label>
        <referenceTo>cb5__CBStyle__c</referenceTo>
        <relationshipLabel>CB Org Variables</relationshipLabel>
        <relationshipName>CB_Org_Variables</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__BudgetLineLvl2Style__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budget Line Lvl2 Style</label>
        <referenceTo>cb5__CBStyle__c</referenceTo>
        <relationshipLabel>CB Org Variables (Budget Line Lvl2 Style)</relationshipLabel>
        <relationshipName>CB_Org_Variables1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__BudgetLineLvl3Style__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budget Line Lvl3 Style</label>
        <referenceTo>cb5__CBStyle__c</referenceTo>
        <relationshipLabel>CB Org Variables (Budget Line Lvl3 Style)</relationshipLabel>
        <relationshipName>CB_Org_Variables2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__BudgetLinesOrder__c</fullName>
        <label>Budget Lines Order</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Name</fullName>
                </value>
                <value>
                    <fullName>CreatedDate</fullName>
                </value>
                <value>
                    <fullName>cb5__CBAccount__r.Name</fullName>
                </value>
                <value>
                    <fullName>cb5__Status__c</fullName>
                </value>
                <value>
                    <fullName>cb5__CBVariable1__r.Name</fullName>
                </value>
                <value>
                    <fullName>cb5__CBVariable2__r.Name</fullName>
                </value>
                <value>
                    <fullName>cb5__CBVariable3__r.Name</fullName>
                </value>
                <value>
                    <fullName>cb5__CBVariable4__r.Name</fullName>
                </value>
                <value>
                    <fullName>cb5__CBVariable5__r.Name</fullName>
                </value>
                <value>
                    <fullName>cb5__Value__c</fullName>
                </value>
                <value>
                    <fullName>cb5__Value__c DESC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cb5__BudgetLinesPaginationThreshold__c</fullName>
        <defaultValue>25</defaultValue>
        <label>Budget Lines Pagination Threshold</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cb5__CBAccountLabel__c</fullName>
        <defaultValue>&apos;CB Account&apos;</defaultValue>
        <label>CB Account Label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__CBBudgetYearLabel__c</fullName>
        <defaultValue>&apos;CB Budget Year&apos;</defaultValue>
        <label>CB Budget Year Label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__CBDivisionLabel__c</fullName>
        <defaultValue>&apos;CB Division&apos;</defaultValue>
        <label>CB Division Label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__CBPeriodLabel__c</fullName>
        <defaultValue>&apos;CB Period&apos;</defaultValue>
        <label>CB Period Label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__CBVariable1Label__c</fullName>
        <defaultValue>&apos;CB Variable 1&apos;</defaultValue>
        <label>CB Variable 1 Label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__CBVariable2Label__c</fullName>
        <defaultValue>&apos;CB Variable 2&apos;</defaultValue>
        <label>CB Variable 2 Label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__CBVariable3Label__c</fullName>
        <defaultValue>&apos;CB Variable 3&apos;</defaultValue>
        <label>CB Variable 3 Label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__CalculationRuleDeletingJobSize__c</fullName>
        <defaultValue>400</defaultValue>
        <label>Calculation Rule Deleting Job Size</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cb5__CalculationRuleJobSize__c</fullName>
        <defaultValue>20</defaultValue>
        <label>Calculation Rule Job Size</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cb5__DeletingModeJobSize__c</fullName>
        <defaultValue>2000</defaultValue>
        <label>Modeling Rule Deleting Mode Job Size</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cb5__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cb5__DisplayBLMNavigation__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Display BLM Navigation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cb5__FormulaIsUsing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if formula function is using</description>
        <label>Formula Is Using</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cb5__InitWizardJobThreshold__c</fullName>
        <defaultValue>1000</defaultValue>
        <label>Init Wizard Job Threshold</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cb5__MappingProcessJobSize__c</fullName>
        <defaultValue>20</defaultValue>
        <label>Mapping Process Job Size</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cb5__MaxNumberOfDisplayedLines__c</fullName>
        <defaultValue>2000</defaultValue>
        <label>Max Number Of Displayed Lines</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cb5__ModelingRuleJobSize__c</fullName>
        <defaultValue>100</defaultValue>
        <label>Modeling Rule Job Size</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cb5__ModelingRuleMassUpdateJobSize__c</fullName>
        <defaultValue>2000</defaultValue>
        <label>Modeling Rule Mass Update Job Size</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cb5__ModelingRulePeriodShiftJobSize__c</fullName>
        <defaultValue>2000</defaultValue>
        <label>Modeling Rule Period Shift Job Size</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cb5__ModelingRuleZeroingJobSize__c</fullName>
        <defaultValue>2000</defaultValue>
        <label>Modeling Rule Zeroing Job Size</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cb5__NFLDefaultListSize__c</fullName>
        <defaultValue>10</defaultValue>
        <label>Amount of latest NFL to load</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cb5__NonFinancialLibIsUsing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True is non-fin libs are needed</description>
        <label>Non Financial Libraries Is Using</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cb5__OnlyFormulaAnalytics__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If false user can select any combination of analytics</description>
        <label>Only Formula Analytics Is Applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cb5__PeriodValidationEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Period Validation Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cb5__ScenarioIsUsing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scenario Is Using</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cb5__ShowSummaryInTab__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Summary In Tab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cb5__ThemeJSON__c</fullName>
        <label>ThemeJSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cb5__TopdownModeIsUsing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Topdown Mode Is Using</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cb5__TopdownTolerance__c</fullName>
        <defaultValue>0.03</defaultValue>
        <description>Accuracy tolerance for topdown approach</description>
        <inlineHelpText>Accuracy tolerance for topdown approach</inlineHelpText>
        <label>Topdown Tolerance</label>
        <precision>5</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>CB Org Variable</label>
    <listViews>
        <fullName>cb5__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CB Org Variables Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CB Org Variables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>